// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can render green line 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Eastbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <Component>
          <div
            className="m-schedule-direction__route-pattern m-schedule-direction__route-pattern--clickable"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
          >
            All branches
             
            <span
              aria-hidden="true"
              className="notranslate c-svg__icon m-schedule-direction__route-pattern-arrow"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </div>
        </Component>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;

exports[`renders a bus component 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <Component>
          <div
            className="m-schedule-direction__route-pattern"
            onClick={[Function]}
            onKeyUp={[Function]}
          >
            Pattern 2
             
          </div>
        </Component>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;

exports[`renders a subway component 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <div
          className="m-schedule-direction__route-pattern"
        >
          End
        </div>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;

exports[`renders with a static map 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <div
          className="m-schedule-direction__route-pattern"
        >
          End
        </div>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
  <img
    alt="route 1 route map"
    className="img-fluid"
    src="http://example.com/map.png"
  />
  <a
    href="http://example.com/map.pdf"
    rel="noopener noreferrer"
    target="_blank"
  >
    <i
      aria-hidden="true"
      className="fa fa-search-plus"
    />
    View map as a PDF
  </a>
  <LineDiagram>
    <h3
      className="m-schedule-diagram__heading"
    >
      Stops
    </h3>
    <SearchBox>
      <div
        className="m-schedule-diagram__filter c-form__input-container"
      >
        <label
          className="sr-only"
          htmlFor="stop-search"
        >
          Search for a stop
        </label>
        <input
          className="c-form__input"
          id="stop-search"
          onChange={[Function]}
          placeholder="Search for a stop"
          type="text"
          value=""
        />
        <button
          aria-label="search"
          className="c-form__submit-btn"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon-search-reverse-default"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </SearchBox>
    <div
      className="m-schedule-diagram m-schedule-diagram--outward"
    >
      <SingleStop>
        <div
          className="m-schedule-diagram__stop m-schedule-diagram__stop--origin m-schedule-diagram__stop--terminus"
        >
          <div
            className="m-schedule-diagram__lines"
            style={
              Object {
                "color": "##000",
              }
            }
          >
            <div
              className="m-schedule-diagram__line m-schedule-diagram__line--terminus"
              key="terminus-null"
            >
              <svg
                className="m-schedule-diagram__line-stop"
                height="10px"
                preserveAspectRatio="xMidYMin slice"
                viewBox="0 10 10 10"
                width="100%"
              >
                <circle
                  cx="50%"
                  cy="3px"
                  r="5"
                />
              </svg>
            </div>
          </div>
          <div
            className="m-schedule-diagram__stop-content"
          >
            <div
              className="m-schedule-diagram__stop-heading"
            >
              <div
                className="m-schedule-diagram__stop-name"
              >
                <a
                  href="/stops/5547"
                >
                  <h4>
                    <MatchHighlight>
                      <span>
                        Elm St opp Haskell Ave
                      </span>
                    </MatchHighlight>
                  </h4>
                </a>
              </div>
              <div
                className="m-schedule-diagram__features"
              />
            </div>
            <div
              className="m-schedule-diagram__stop-details"
            >
              <div
                className="m-schedule-diagram__connections"
              >
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Route 110"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/110/line"
                    title="Route 110"
                  >
                    <span
                      className="c-icon__bus-pill--small m-schedule-diagram__connection u-bg--bus"
                      key="110"
                    >
                      110
                    </span>
                  </a>
                </Component>
              </div>
            </div>
            <div
              className="m-schedule-diagram__footer"
            >
              <button
                className="btn btn-link"
                onClick={[Function]}
                type="button"
              >
                View schedule
              </button>
            </div>
          </div>
        </div>
      </SingleStop>
      <SingleStop>
        <div
          className="m-schedule-diagram__stop"
        >
          <div
            className="m-schedule-diagram__lines"
            style={
              Object {
                "color": "##000",
              }
            }
          >
            <div
              className="m-schedule-diagram__line m-schedule-diagram__line--stop"
              key="stop-Lowell"
            >
              <svg
                className="m-schedule-diagram__line-stop"
                height="10px"
                preserveAspectRatio="xMidYMin slice"
                viewBox="0 10 10 10"
                width="100%"
              >
                <circle
                  cx="50%"
                  cy="32px"
                  r="4"
                />
              </svg>
            </div>
          </div>
          <div
            className="m-schedule-diagram__stop-content"
          >
            <div
              className="m-schedule-diagram__stop-heading"
            >
              <div
                className="m-schedule-diagram__stop-name"
              >
                <a
                  href="/stops/place-tufts"
                >
                  <h4>
                    <MatchHighlight>
                      <span>
                        Tufts Medical Center
                      </span>
                    </MatchHighlight>
                  </h4>
                </a>
              </div>
              <div
                className="m-schedule-diagram__features"
              />
            </div>
            <div
              className="m-schedule-diagram__stop-details"
            >
              <div
                className="m-schedule-diagram__connections"
              >
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Silver Line SL1"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/741/line"
                    title="Silver Line SL1"
                  >
                    <span
                      className="c-icon__bus-pill--small m-schedule-diagram__connection u-bg--silver-line"
                      key="741"
                    >
                      SL1
                    </span>
                  </a>
                </Component>
              </div>
            </div>
            <div
              className="m-schedule-diagram__footer"
            >
              <button
                className="btn btn-link"
                onClick={[Function]}
                type="button"
              >
                View schedule
              </button>
            </div>
          </div>
        </div>
      </SingleStop>
      <SingleStop>
        <div
          className="m-schedule-diagram__stop"
        >
          <div
            className="m-schedule-diagram__lines"
            style={
              Object {
                "color": "##000",
              }
            }
          >
            <div
              className="m-schedule-diagram__line m-schedule-diagram__line--stop"
              key="stop-Lowell"
            >
              <svg
                className="m-schedule-diagram__line-stop"
                height="10px"
                preserveAspectRatio="xMidYMin slice"
                viewBox="0 10 10 10"
                width="100%"
              >
                <circle
                  cx="50%"
                  cy="32px"
                  r="4"
                />
              </svg>
            </div>
          </div>
          <div
            className="m-schedule-diagram__stop-content"
          >
            <div
              className="m-schedule-diagram__stop-heading"
            >
              <div
                className="m-schedule-diagram__stop-name"
              >
                <a
                  href="/stops/place-north"
                >
                  <h4>
                    <MatchHighlight>
                      <span>
                        North Station
                      </span>
                    </MatchHighlight>
                  </h4>
                </a>
              </div>
              <div
                className="m-schedule-diagram__features"
              >
                <Component>
                  <span
                    data-animation="true"
                    data-original-title="Parking"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    title="Parking"
                  >
                    <span
                      aria-hidden="false"
                      className="notranslate c-svg__icon-parking-default m-schedule-diagram__feature-icon"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "SVG",
                        }
                      }
                    />
                  </span>
                </Component>
                <Component>
                  <span
                    data-animation="true"
                    data-original-title="Accessible"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    title="Accessible"
                  >
                    <span
                      aria-hidden="false"
                      className="notranslate c-svg__icon-acessible-default m-schedule-diagram__feature-icon"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "SVG",
                        }
                      }
                    />
                  </span>
                </Component>
                <span
                  className="c-icon__cr-zone m-schedule-diagram__feature-icon"
                >
                  Zone 1A
                </span>
              </div>
            </div>
            <div
              className="m-schedule-diagram__stop-details"
            >
              <div
                className="m-schedule-diagram__connections"
              >
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Orange Line"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/Orange/line"
                    title="Orange Line"
                  >
                    <span
                      className="m-schedule-diagram__connection"
                      key="Orange"
                    >
                      <span
                        aria-hidden="false"
                        className="notranslate c-svg__icon"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "SVG",
                          }
                        }
                      />
                    </span>
                  </a>
                </Component>
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Green Line C"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/Green-C/line"
                    title="Green Line C"
                  >
                    <span
                      className="m-schedule-diagram__connection"
                      key="Green-C"
                    >
                      <span
                        aria-hidden="false"
                        className="notranslate c-svg__icon"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "SVG",
                          }
                        }
                      />
                    </span>
                  </a>
                </Component>
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Green Line E"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/Green-E/line"
                    title="Green Line E"
                  >
                    <span
                      className="m-schedule-diagram__connection"
                      key="Green-E"
                    >
                      <span
                        aria-hidden="false"
                        className="notranslate c-svg__icon"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "SVG",
                          }
                        }
                      />
                    </span>
                  </a>
                </Component>
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Commuter Rail"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/CR-Fitchburg/line"
                    title="Commuter Rail"
                  >
                    <span
                      className="m-schedule-diagram__connection"
                      key="CR-Fitchburg"
                    >
                      <span
                        aria-hidden="false"
                        className="notranslate c-svg__icon"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "SVG",
                          }
                        }
                      />
                    </span>
                  </a>
                </Component>
              </div>
            </div>
            <div
              className="m-schedule-diagram__footer"
            >
              <button
                className="btn btn-link"
                onClick={[Function]}
                type="button"
              >
                View schedule
              </button>
            </div>
          </div>
        </div>
      </SingleStop>
      <SingleStop>
        <div
          className="m-schedule-diagram__stop m-schedule-diagram__stop--destination m-schedule-diagram__stop--terminus"
        >
          <div
            className="m-schedule-diagram__lines"
            style={
              Object {
                "color": "##000",
              }
            }
          >
            <div
              className="m-schedule-diagram__line m-schedule-diagram__line--terminus"
              key="terminus-null"
            >
              <svg
                className="m-schedule-diagram__line-stop"
                height="10px"
                preserveAspectRatio="xMidYMin slice"
                viewBox="0 10 10 10"
                width="100%"
              >
                <circle
                  cx="50%"
                  cy="32px"
                  r="5"
                />
              </svg>
            </div>
          </div>
          <div
            className="m-schedule-diagram__stop-content"
          >
            <div
              className="m-schedule-diagram__stop-heading"
            >
              <div
                className="m-schedule-diagram__stop-name"
              >
                <a
                  href="/stops/place-alfcl"
                >
                  <h4>
                    <span
                      aria-hidden="false"
                      className="notranslate c-svg__icon-alerts-triangle"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "SVG",
                        }
                      }
                    />
                    <span
                      className="sr-only"
                    >
                      Service alert or delay
                    </span>
                     
                    <MatchHighlight>
                      <span>
                        Alewife
                      </span>
                    </MatchHighlight>
                  </h4>
                </a>
              </div>
              <div
                className="m-schedule-diagram__features"
              >
                <Component>
                  <span
                    data-animation="true"
                    data-original-title="Parking"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    title="Parking"
                  >
                    <span
                      aria-hidden="false"
                      className="notranslate c-svg__icon-parking-default m-schedule-diagram__feature-icon"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "SVG",
                        }
                      }
                    />
                  </span>
                </Component>
                <Component>
                  <span
                    data-animation="true"
                    data-original-title="Accessible"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    title="Accessible"
                  >
                    <span
                      aria-hidden="false"
                      className="notranslate c-svg__icon-acessible-default m-schedule-diagram__feature-icon"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "SVG",
                        }
                      }
                    />
                  </span>
                </Component>
              </div>
            </div>
            <div
              className="m-schedule-diagram__stop-details"
            >
              <div
                className="m-schedule-diagram__connections"
              >
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Route 62"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/62/line"
                    title="Route 62"
                  >
                    <span
                      className="c-icon__bus-pill--small m-schedule-diagram__connection u-bg--bus"
                      key="62"
                    >
                      62
                    </span>
                  </a>
                </Component>
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Route 67"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/67/line"
                    title="Route 67"
                  >
                    <span
                      className="c-icon__bus-pill--small m-schedule-diagram__connection u-bg--bus"
                      key="67"
                    >
                      67
                    </span>
                  </a>
                </Component>
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Route 76"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/76/line"
                    title="Route 76"
                  >
                    <span
                      className="c-icon__bus-pill--small m-schedule-diagram__connection u-bg--bus"
                      key="76"
                    >
                      76
                    </span>
                  </a>
                </Component>
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Route 79"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/79/line"
                    title="Route 79"
                  >
                    <span
                      className="c-icon__bus-pill--small m-schedule-diagram__connection u-bg--bus"
                      key="79"
                    >
                      79
                    </span>
                  </a>
                </Component>
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Route 84"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/84/line"
                    title="Route 84"
                  >
                    <span
                      className="c-icon__bus-pill--small m-schedule-diagram__connection u-bg--bus"
                      key="84"
                    >
                      84
                    </span>
                  </a>
                </Component>
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Route 350"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/350/line"
                    title="Route 350"
                  >
                    <span
                      className="c-icon__bus-pill--small m-schedule-diagram__connection u-bg--bus"
                      key="350"
                    >
                      350
                    </span>
                  </a>
                </Component>
                <Component>
                  <a
                    data-animation="false"
                    data-original-title="Route 351"
                    data-placement="bottom"
                    data-selector="true"
                    data-toggle="tooltip"
                    data-trigger="hover focus"
                    href="/schedules/351/line"
                    title="Route 351"
                  >
                    <span
                      className="c-icon__bus-pill--small m-schedule-diagram__connection u-bg--bus"
                      key="351"
                    >
                      351
                    </span>
                  </a>
                </Component>
              </div>
            </div>
            <div
              className="m-schedule-diagram__footer"
            >
              <button
                className="btn btn-link"
                onClick={[Function]}
                type="button"
              >
                View schedule
              </button>
            </div>
          </div>
        </div>
      </SingleStop>
    </div>
    <WrappedModal>
      <Modal />
    </WrappedModal>
  </LineDiagram>
</ScheduleDirection>
`;
